--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,6 @@
             android:text="Mulai"
             android:textSize="28dp"
             android:textStyle="bold"
-            android:backgroundTint="#FF934F" />
+            android:background="@drawable/button_background"/>
 
 </RelativeLayout>
