--- a/app/src/main/res/drawable/soft_orange_rounded_full.xml
+++ b/app/src/main/res/drawable/soft_orange_rounded_full.xml
@@ -1,5 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FF934F"/>
-    <corners android:radius="10dp"/>
+    <solid android:color="#FFFFEA"/>
+    <corners android:radius="30dp" />
+    
+
     <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
 </shape>
