--- a/app/src/main/res/drawable/soft_orange_rounded_top.xml
+++ b/app/src/main/res/drawable/soft_orange_rounded_top.xml
@@ -1,5 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#C8733D"/>
-    <corners android:radius="30dp"/>
+    <solid android:color="#FFFFEA"/>
+    <corners android:topRightRadius="30dp" android:topLeftRadius="30dp"/>
+
+
     <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
 </shape>
