--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="150dp"
         android:layout_marginRight="25dp"
         android:layout_marginBottom="25dp"
-        android:background="#FFFFEA"
+        android:background="@drawable/soft_orange_rounded_full"
         android:orientation="vertical">
 
         <TextView
@@ -34,14 +34,19 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="70dp"
             android:layout_marginRight="20dp"
-            android:background="#FF934F"
-            android:orientation="vertical">
-
+            android:background="@drawable/orange_rounded_full"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="12dp"
+                android:src="@drawable/ic_user"/>
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:drawableLeft="@drawable/ic_user"
-                android:hint="         Username"
+                android:layout_height="match_parent"
+                android:layout_marginRight="30dp"
+                android:gravity="center"
+                android:hint="Username"
                 android:textColorHint="#FFFFFF"
                 android:textSize="28dp" />
         </LinearLayout>
@@ -49,20 +54,31 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="20dp"
-            android:gravity="bottom"
+            android:paddingTop="100dp"
             android:orientation="vertical">
 
             <Button
+                android:id="@+id/btn_masuk"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
-                android:backgroundTint="#FF934F"
+                android:background="@drawable/button_background"
                 android:text="Masuk"
                 android:textColor="#FFFFFF"
                 android:textSize="28dp"
                 android:textStyle="bold" />
+            <TextView
+                android:id="@+id/txt_login"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:text="Tidak memiliki akun? Klik di sini"
+                android:textColor="#FF934F"
+                android:gravity="center"
+                android:textSize="20sp" />
         </LinearLayout>
-
     </LinearLayout>
 </LinearLayout>
