--- a/app/src/main/res/layout/activity_o_t_p.xml
+++ b/app/src/main/res/layout/activity_o_t_p.xml
@@ -14,7 +14,7 @@
         android:layout_marginLeft="25dp"
         android:layout_marginTop="95dp"
         android:layout_marginRight="25dp"
-        android:background="#FFFFEA"
+        android:background="@drawable/soft_orange_rounded_top"
         android:orientation="vertical">
 
         <TextView
@@ -60,46 +60,59 @@
                 android:layout_height="50dp"
                 android:ems="1"
                 android:inputType="number"
-                android:background="#FF934F"
+                android:background="@drawable/orange_rounded_full"
                 android:layout_margin="20dp"/>
             <EditText
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:ems="1"
                 android:inputType="number"
-                android:background="#FF934F"
+                android:background="@drawable/orange_rounded_full"
                 android:layout_margin="20dp"/>
             <EditText
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:ems="1"
                 android:inputType="number"
-                android:background="#FF934F"
+                android:background="@drawable/orange_rounded_full"
                 android:layout_margin="20dp"/>
             <EditText
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:ems="1"
                 android:inputType="number"
-                android:background="#FF934F"
+                android:background="@drawable/orange_rounded_full"
                 android:layout_margin="20dp"/>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="20dp"
+            android:layout_marginTop="180dp"
             android:gravity="bottom"
             android:orientation="vertical">
             <Button
+                android:id="@+id/btn_selesai"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
-                android:backgroundTint="#FF934F"
+                android:background="@drawable/orange_rounded_full"
                 android:text="Selesai"
                 android:textColor="#FFFFFF"
                 android:textSize="28dp"
                 android:textStyle="bold" />
+            <TextView
+                android:id="@+id/txt_otp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:text="Kirim ulang OTP? Klik di sini"
+                android:textColor="#FF934F"
+                android:gravity="center"
+                android:textSize="20sp" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
