--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -14,7 +14,7 @@
         android:layout_marginLeft="25dp"
         android:layout_marginTop="95dp"
         android:layout_marginRight="25dp"
-        android:background="#FFFFEA"
+        android:background="@drawable/soft_orange_rounded_top"
         android:orientation="vertical">
 
         <TextView
@@ -33,52 +33,72 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="70dp"
             android:layout_marginRight="20dp"
-            android:background="#FF934F"
-            android:orientation="vertical">
-
+            android:background="@drawable/orange_rounded_full"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="12dp"
+                android:src="@drawable/ic_smartphone"/>
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:drawableLeft="@drawable/ic_smartphone"
-                android:hint="     No Handphone"
-                android:textColorHint="#FFFFFF"
-                android:textSize="28dp"
-                android:ems="13"
-                android:inputType="phone"/>
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="20dp"
-            android:background="#FF934F"
-            android:orientation="vertical">
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:drawableLeft="@drawable/ic_user"
-                android:hint="         Username"
+                android:layout_height="match_parent"
+                android:layout_marginRight="30dp"
+                android:gravity="center"
+                android:hint="No Handphone"
                 android:textColorHint="#FFFFFF"
                 android:textSize="28dp" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/orange_rounded_full"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="12dp"
+                android:src="@drawable/ic_user"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginRight="30dp"
+                android:gravity="center"
+                android:hint="Username"
+                android:textColorHint="#FFFFFF"
+                android:textSize="28dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="20dp"
-            android:gravity="bottom"
+            android:paddingTop="100dp"
             android:orientation="vertical">
             <Button
+                android:id="@+id/btn_signup"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
-                android:backgroundTint="#FF934F"
+                android:background="@drawable/orange_rounded_full"
                 android:text="Lanjut"
                 android:textColor="#FFFFFF"
                 android:textSize="28dp"
                 android:textStyle="bold" />
+            <TextView
+                android:id="@+id/txt_signup"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:text="Sudah memiliki akun? Klik di sini"
+                android:textColor="#FF934F"
+                android:gravity="center"
+                android:textSize="20sp" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
