--- a/app/src/main/res/layout/activity_beranda.xml
+++ b/app/src/main/res/layout/activity_beranda.xml
@@ -68,6 +68,7 @@
             android:textSize="24dp" />
 
         <LinearLayout
+            android:id="@+id/btn_suhu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
