--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -35,20 +35,29 @@
             android:layout_marginRight="20dp"
             android:background="@drawable/orange_rounded_full"
             android:orientation="horizontal">
+
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_margin="12dp"
-                android:src="@drawable/ic_smartphone"/>
+                android:src="@drawable/ic_smartphone" />
+
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginRight="30dp"
                 android:gravity="center"
                 android:hint="No Handphone"
+                android:inputType="phone"
+                android:maxLength="13"
                 android:textColorHint="#FFFFFF"
-                android:textSize="28dp" />
+                android:textColor="#FFFFFF"
+                android:textSize="28dp"
+                android:maxLines="1"
+                android:lines="1"/>
+
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -69,7 +78,10 @@
                 android:gravity="center"
                 android:hint="Username"
                 android:textColorHint="#FFFFFF"
-                android:textSize="28dp" />
+                android:textColor="#FFFFFF"
+                android:textSize="28dp"
+                android:maxLines="1"
+                android:lines="1"/>
         </LinearLayout>
 
         <LinearLayout
