--- a/app/src/main/res/layout/activity_kelembapan.xml
+++ b/app/src/main/res/layout/activity_kelembapan.xml
@@ -12,9 +12,10 @@
         android:layout_height="wrap_content"
         android:text="Kelembapan"
         android:textStyle="bold"
-        android:textSize="48dp"
+        android:textSize="44dp"
         android:textColor="#FFFFFF"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:fontFamily="@font/preg"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -23,21 +24,22 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:ems="10"
+            android:ems="8"
             android:inputType="date"
             android:text="Senin, 01 Januari 2020"
             android:textColor="#FFFFFF"
-            android:textSize="24dp" />
+            android:textSize="24dp"
+            android:fontFamily="@font/preg"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:gravity="end"
             android:inputType="time"
             android:text="07.00"
             android:textColor="#FFFFFF"
-            android:textSize="24dp" />
+            android:textSize="24dp"
+            android:fontFamily="@font/preg"/>
     </LinearLayout>
 
     <LinearLayout
@@ -60,10 +62,14 @@
             android:layout_gravity="center"
             android:text="93%"
             android:textColor="#000000"
-            android:textSize="64sp"
-            android:textStyle="bold" />
+            android:textSize="60sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/preg"/>
 
 
+       <ScrollView
+           android:layout_width="match_parent"
+           android:layout_height="match_parent">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -82,7 +88,8 @@
                     android:inputType="date"
                     android:text="Senin, 01 Januari 2020"
                     android:textColor="#FFFFFF"
-                    android:textSize="25sp" />
+                    android:textSize="25sp"
+                    android:fontFamily="@font/preg"/>
                 <TableRow
                     android:background="#FF934F"
                     android:padding="10dp">
@@ -93,7 +100,8 @@
                         android:text="10.00"
                         android:textColor="#FFFFFF"
                         android:gravity="center"
-                        android:textSize="20sp"/>
+                        android:textSize="22sp"
+                        android:fontFamily="@font/preg"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -101,114 +109,20 @@
                         android:text="23"
                         android:textColor="#FFFFFF"
                         android:gravity="center"
-                        android:textSize="20sp"/>
+                        android:textSize="22sp"
+                        android:fontFamily="@font/preg"/>
+
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
                         android:layout_weight="1"
-                        android:gravity="center" />
+                        android:gravity="center"
+                        android:src="@drawable/ic_hose" />
                 </TableRow>
-                <TableRow
-                    android:background="#FF934F"
-                    android:padding="10dp">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:text="10.00"
-                        android:textColor="#FFFFFF"
-                        android:gravity="center"
-                        android:textSize="20sp"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:text="23"
-                        android:textColor="#FFFFFF"
-                        android:gravity="center"
-                        android:textSize="20sp"/>
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center" />
-                </TableRow>
-                <TableRow
-                    android:background="#FF934F"
-                    android:padding="10dp">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:text="10.00"
-                        android:textColor="#FFFFFF"
-                        android:gravity="center"
-                        android:textSize="20sp"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:text="23"
-                        android:textColor="#FFFFFF"
-                        android:gravity="center"
-                        android:textSize="20sp"/>
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center" />
-                </TableRow>
-                <TableRow
-                    android:background="#FF934F"
-                    android:padding="10dp">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:text="10.00"
-                        android:textColor="#FFFFFF"
-                        android:gravity="center"
-                        android:textSize="20sp"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:text="23"
-                        android:textColor="#FFFFFF"
-                        android:gravity="center"
-                        android:textSize="20sp"/>
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center" />
-                </TableRow>
-                <TableRow
-                    android:background="#FF934F"
-                    android:padding="10dp">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:text="10.00"
-                        android:textColor="#FFFFFF"
-                        android:gravity="center"
-                        android:textSize="20sp"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:text="23"
-                        android:textColor="#FFFFFF"
-                        android:gravity="center"
-                        android:textSize="20sp"/>
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center" />
-                </TableRow>
+
             </TableLayout>
         </RelativeLayout>
+       </ScrollView>
     </LinearLayout>
 </LinearLayout>
