--- a/app/src/main/res/layout/activity_o_t_p.xml
+++ b/app/src/main/res/layout/activity_o_t_p.xml
@@ -24,8 +24,9 @@
             android:gravity="center_horizontal"
             android:text="OTP"
             android:textColor="#FF934F"
-            android:textSize="64sp"
-            android:textStyle="bold" />
+            android:textSize="60sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/preg"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -39,16 +40,18 @@
                 android:gravity="center_horizontal"
                 android:text="Masukkan"
                 android:textColor="#FF934F"
-                android:textSize="32sp"
-                android:textStyle="bold"/>
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:fontFamily="@font/preg"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 android:text="Kode Verifikasi"
                 android:textColor="#FF934F"
-                android:textSize="32sp"
-                android:textStyle="bold"/>
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:fontFamily="@font/preg"/>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -65,8 +68,9 @@
                 android:maxLines="1"
                 android:lines="1"
                 android:textColor="#FFFFFF"
-                android:textSize="28dp"
-                android:gravity="center"/>
+                android:textSize="26dp"
+                android:gravity="center"
+                android:fontFamily="@font/preg"/>
             <EditText
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -77,8 +81,9 @@
                 android:maxLines="1"
                 android:lines="1"
                 android:textColor="#FFFFFF"
-                android:textSize="28dp"
-                android:gravity="center"/>
+                android:textSize="26dp"
+                android:gravity="center"
+                android:fontFamily="@font/preg"/>
             <EditText
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -89,8 +94,9 @@
                 android:maxLines="1"
                 android:lines="1"
                 android:textColor="#FFFFFF"
-                android:textSize="28dp"
-                android:gravity="center"/>
+                android:textSize="26dp"
+                android:gravity="center"
+                android:fontFamily="@font/preg"/>
             <EditText
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -101,8 +107,9 @@
                 android:maxLines="1"
                 android:lines="1"
                 android:textColor="#FFFFFF"
-                android:textSize="28dp"
-                android:gravity="center"/>
+                android:textSize="26dp"
+                android:gravity="center"
+                android:fontFamily="@font/preg"/>
         </LinearLayout>
 
         <LinearLayout
@@ -121,8 +128,9 @@
                 android:background="@drawable/button_background"
                 android:text="Selesai"
                 android:textColor="#FFFFFF"
-                android:textSize="28dp"
-                android:textStyle="bold" />
+                android:textSize="26dp"
+                android:textStyle="bold"
+                android:fontFamily="@font/preg"/>
             <TextView
                 android:id="@+id/txt_otp"
                 android:layout_width="match_parent"
@@ -132,7 +140,8 @@
                 android:text="Kirim ulang OTP? Klik di sini"
                 android:textColor="#FF934F"
                 android:gravity="center"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:fontFamily="@font/preg"/>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
