--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -24,8 +24,9 @@
             android:gravity="center_horizontal"
             android:text="Sign Up"
             android:textColor="#FF934F"
-            android:textSize="64sp"
-            android:textStyle="bold" />
+            android:textSize="60sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/preg"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -54,8 +55,8 @@
                 android:textColor="#FFFFFF"
                 android:textSize="28dp"
                 android:maxLines="1"
-                android:lines="1"/>
-
+                android:lines="1"
+                android:fontFamily="@font/preg"/>
         </LinearLayout>
 
         <LinearLayout
@@ -81,7 +82,8 @@
                 android:textColor="#FFFFFF"
                 android:textSize="28dp"
                 android:maxLines="1"
-                android:lines="1"/>
+                android:lines="1"
+                android:fontFamily="@font/preg"/>
         </LinearLayout>
 
         <LinearLayout
@@ -99,8 +101,9 @@
                 android:background="@drawable/button_background"
                 android:text="Lanjut"
                 android:textColor="#FFFFFF"
-                android:textSize="28dp"
-                android:textStyle="bold" />
+                android:textSize="26dp"
+                android:textStyle="bold"
+                android:fontFamily="@font/preg"/>
             <TextView
                 android:id="@+id/txt_signup"
                 android:layout_width="match_parent"
@@ -110,7 +113,8 @@
                 android:text="Sudah memiliki akun? Klik di sini"
                 android:textColor="#FF934F"
                 android:gravity="center"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:fontFamily="@font/preg"/>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
