--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,6 +43,7 @@
                 android:layout_margin="12dp"
                 android:src="@drawable/ic_user"/>
             <EditText
+                android:id="@+id/username"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginRight="30dp"
@@ -75,17 +76,25 @@
                 android:textSize="26dp"
                 android:textStyle="bold"
                 android:fontFamily="@font/preg"/>
+
             <TextView
                 android:id="@+id/txt_login"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="65dp"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
+                android:fontFamily="@font/preg"
+                android:gravity="center"
                 android:text="Tidak memiliki akun? Klik di sini"
                 android:textColor="#FF934F"
-                android:gravity="center"
-                android:textSize="20sp"
-                android:fontFamily="@font/preg"/>
+                android:textSize="20sp" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="invisible" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
